# vtk-buildsystem

./: CMakeLists.txt  Readme.md
application/: CMakeLists.txt  Readme.md  main.cpp
bar/: CMakeLists.txt  bar.cpp  bar.hpp  bar_exports.hpp
foo/: CMakeLists.txt  foo.cpp  foo.hpp  foo_exports.hpp
